Closed Bug 1851250 Opened 1 year ago Closed 1 year ago

MathML layout not updated correctly if textnode's data is updated

Categories

(Core :: MathML, defect)

defect

Tracking

()

RESOLVED FIXED
119 Branch
Tracking Status
firefox119 --- fixed

People

(Reporter: smaug, Assigned: smaug)

References

Details

Attachments

(3 files)

Attached patch mathml.diffSplinter Review

The patch is for testing/web-platform/tests/mathml/presentation-markup/tokens/dynamic-mtext-like-001.html to show how it breaks if one doesn't replace a text node but only modifies it.

Assignee: nobody → smaug

Hmm, this isn't as trivial as I had hoped.

Assignee: smaug → nobody
Attachment #9351329 - Attachment description: WIP: Bug 1851250, test, r=emilio → Bug 1851250, test, r=emilio
Assignee: nobody → smaug
Status: NEW → ASSIGNED
Attachment #9351334 - Attachment description: WIP: Bug 1851250, recreate the frame if single char math:mi changes, r=emilio → Bug 1851250, recreate the frame if single char math:mi changes, r=emilio
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/41786 for changes under testing/web-platform/tests
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 119 Branch
Upstream PR merged by moz-wptsync-bot
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: