Bug 1851250, recreate the frame if single char math:mi changes, r=emilio

Depends on D187334

Differential Revision: https://phabricator.services.mozilla.com/D187335